src/api/snapshots/tidx__api__views__tests__view_approval_allowances.snap
---
source: src/api/views.rs
assertion_line: 833
expression: sql
---
WITH Approval AS (
    SELECT block_num, block_timestamp, log_idx, tx_idx, 
           concat('0x', lower(substring(tx_hash, 3))) AS tx_hash,
           concat('0x', lower(substring(address, 3))) AS address, selector, topic1, topic2, topic3, data, abi_address(topic1) AS "owner", abi_address(topic2) AS "spender", abi_uint(abi_word(data, 0)) AS "value"
    FROM logs
    WHERE selector = '0x8c5be1e5ebec7d5bd14f71427d1e84f3dd0314c0f7b2291e5b200ac8c7c3b925'
) SELECT 
                address as token,
                "owner",
                "spender",
                argMax("value", block_num) as current_allowance
            FROM Approval
            GROUP BY token, "owner", "spender"
