src/api/snapshots/tidx__api__views__tests__view_daily_stats.snap
---
source: src/api/views.rs
assertion_line: 850
expression: sql
---
WITH Transfer AS (
    SELECT block_num, block_timestamp, log_idx, tx_idx, 
           concat('0x', lower(substring(tx_hash, 3))) AS tx_hash,
           concat('0x', lower(substring(address, 3))) AS address, selector, topic1, topic2, topic3, data, abi_address(topic1) AS "from", abi_address(topic2) AS "to", abi_uint(abi_word(data, 0)) AS "value"
    FROM logs
    WHERE selector = '0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef'
) SELECT 
                toDate(block_timestamp) as day,
                address as token,
                COUNT(*) as transfer_count,
                COUNT(DISTINCT "from") as unique_senders,
                COUNT(DISTINCT "to") as unique_receivers,
                SUM("value") as total_volume
            FROM Transfer
            GROUP BY day, token
